mobile overflow fix

--- a/anncolis.css
+++ b/anncolis.css
@@ -2,66 +2,62 @@ html, body, .container {
 	height: 100%;
 }
 
-.row {
-    height: 100%;
-    display: table-row;
-}
-
-
-.container {
-    display: table;
-    width: 100%;
-    padding: 50px 0 0 0; /*set left/right padding according to needs*/
-    box-sizing: border-box;
-}
-
 .full-height {
 	height: 100vh;
 	min-height: 600px;
 	max-height: 760px;
+	overflow: hidden;
 }
+
+.decrease {
+
+}
+
 
 .white-bg {
 	background-color: #ffffff;
 
 }
 
-#img {
-	max-height: 680px;
-	width: auto;
-	float: right;
-
-}
-
-.imgcol {
-	float: right;
-	}
-
-
-.pfont {
+.font {
 	font-family: 'Dancing Script', cursive;
-	height: 100%;
-	max-width: 700px;
 	float: left;
 }
 
-.pfont p {
-	font-size: 85px; 
+.font h1 {
+	font-size: 75px;
 	padding-left: 10px;
-	padding-top: 60px; 
+	padding-top: 60px;
 	color: #4A4A4A;
 
 }
 
 
-.pfont p2 {
+.font h2 {
 	font-size: 25px;
 	font-family: 'Dancing Script', cursive;
-	padding-left: 10px;
+  padding: 30px 10px;
 	color: #4A4A4A;
-	margin-top: -20px;
 }
 
 .divider {
-	padding-left: 10px;
+	padding: 10px;
+}
+
+
+@media (min-width: 992px) {
+  .va-center {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+}
+
+@media (min-width: 1200px) {
+  .va-center {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
